update announcement-bar text

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -20,7 +20,7 @@
           "announcement-bar-0": {
             "type": "announcement",
             "settings": {
-              "text": "Welcome to our store 2022-01-20",
+              "text": "Welcome to our store 2022-01-20 local",
               "color_scheme": "inverse",
               "link": ""
             }
